<resources>
    <string name="app_name">MuVi</string>
    <string name="email_registration">Email Registration</string>
    <string name="prompt_email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="resend_verification_email">Resend verification email</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="reset_password">Reset Password</string>
    <string name="save_profile_menu">save</string>
    <string name="input_placeholder">Write a message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
