<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_amber_50"
    android:id="@+id/relLayout1"
    android:padding="20dp">

    <TextView
        android:id="@+id/textEmailReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/email_registration"
        android:textColor="@color/Black"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textEmailReg"
        android:layout_marginTop="30dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/Black"
        android:textColorHint="@color/orange" />


    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_email"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/Black"
        android:textColorHint="@color/orange" />

    <EditText
        android:id="@+id/input_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_password"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/Black"
        android:textColorHint="@color/orange" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_register"
        style="@style/FirebaseUI.Button.AccountChooser.EmailButton"
        android:layout_width="131dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="177dp"
        android:drawableLeft="@drawable/ic_person"
        android:gravity="left|center_vertical"
        android:text="@string/register" />
</RelativeLayout>